--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt incidunt maxime dolor, totam facere dicta recusandae iste odio quos ab omnis corrupti ad ullam aut ipsum officia. Dicta officiis magnam adipisci necessitatibus, quibusdam quae ex ratione dolorum perspiciatis, dignissimos distinctio!</p>
                     <div>
                         <ion-icon name="person-outline"></ion-icon>
-                        <p>Rua 7D, Qd. 05, Lt. 14, n° 32</p>
+                        <p>Endereço</p>
                     </div>
                     <div>
                         <ion-icon name="person-outline"></ion-icon>
