--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <div id="contatoRow">
 
                 <div id="contatoRowText">
-                    <h3>Qual a sua histótia? Entre em Contato</h3>
+                    <h3>Qual a sua histótia? Entre em Contato!</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt incidunt maxime dolor, totam facere dicta recusandae iste odio quos ab omnis corrupti ad ullam aut ipsum officia. Dicta officiis magnam adipisci necessitatibus, quibusdam quae ex ratione dolorum perspiciatis, dignissimos distinctio!</p>
                     <div>
                         <ion-icon name="person-outline"></ion-icon>
